# ande-reth

./: .dockerignore  .dockerignore.backup  .gitignore  ANDE_README.md  BITCOIN_NATIVE_INTEGRATION_RESEARCH.md  CLAUDE.md  Cargo.toml  DECENTRALIZATION_ROADMAP.md  Dockerfile  Dockerfile.andechain  Dockerfile.cross  Dockerfile.optimized.backup  FINAL_SUMMARY.txt  IMPLEMENTATION_STATUS.md  NEXT_STEPS.md  README.md  SECURITY_AUDIT.md  SUMMARY.txt  TBTC_VS_CUSTOM_BRIDGE_ANALYSIS.md  VERSION  parallel-config.example.toml
.github/scripts/: analyze_docker_failures.py  analyze_docker_failures.sh  docker_failure_analyzer.py  gemini_reviewer.py  post_pr_analysis.py
.github/workflows/: analyze-docker-failures.yml  claude-code-review.yml  dependencies.yml  docker-failure-analysis.yml  docker.yml  gemini-code-review.yml  publish-docker-image.yml  release.yml
benches/: Cargo.toml
benches/src/: ande_precompile_bench.rs  lib.rs
contracts/: PlantGenome.sol
crates/consensus-bindings/: Cargo.toml
crates/consensus-bindings/src/: lib.rs
crates/evolve/: Cargo.toml  PARALLEL_SECURITY.md
crates/evolve/fuzz/: Cargo.toml
crates/evolve/fuzz/fuzz_targets/: ande_precompile_fuzz.rs
crates/evolve/src/: attestation.rs  consensus_client.rs  consensus_config.rs  lib.rs
crates/evolve/src/evm_config/: ande_evm_factory.rs  ande_precompile_provider.rs  e2e_test.rs  executor_factory.rs  factory.rs  injection.rs  integration_test.rs  mod.rs  precompile.rs  precompile_config.rs  precompile_inspector.rs  wrapper.rs
crates/evolve/src/mev/: auction.rs  detector.rs  distributor.rs  mod.rs  types.rs
crates/evolve/src/parallel/: config.rs  executor.rs  mod.rs  mv_memory.rs  scheduler.rs
crates/evolve/tests/: integration_consensus_test.rs
crates/node/: Cargo.toml
crates/node/src/: builder.rs  config.rs  executor_builder.rs  lib.rs
crates/tests/src/: common.rs
crates/tests/tests/: ande_integration_test.rs
docs/: ANDECHAIN_COMPONENT_CHANGES.md  ANDECHAIN_DEPLOYMENT_PLAN.md  ANDECHAIN_INTEGRATION_PLAN.md  ANDECHAIN_NEW_WORKFLOW.md  ANDE_INTEGRATION_GUIDE.md  CHANGELOG.md  UPGRADE_GUIDE.md  V0.3.0_FINAL_STATUS.md
sacred-plants-kintu/: chacruna_psychotria_viridis_rbcL.fasta  chacruna_psychotria_viridis_rbcL_CORRECTED.fasta  kintu_genesis_data.json  kuka_erythroxylum_chloroplast_NC030601.fasta  kuka_erythroxylum_coca_rbcL.fasta  process_kintu_genesis.py  sonko_wachay.json  verify_kintu.sh  yage_banisteriopsis_caapi_matK.fasta  yage_banisteriopsis_caapi_matK_CORRECTED.fasta
scripts/: health-check.sh  start-ande.sh
specs/: genesis.json
