[package]
name = "ande-consensus-bindings"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# Alloy for Ethereum types and contract bindings
alloy = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = "1.0.37"

# Serde for serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Error handling
thiserror = { workspace = true }
eyre = { workspace = true }

[dev-dependencies]
