[package]
name = "evolve-ev-reth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Evolve-specific types and integration for ev-reth"

[dependencies]
# Reth dependencies
reth-payload-primitives.workspace = true
reth-primitives.workspace = true
reth-primitives-traits.workspace = true
reth-engine-primitives.workspace = true
reth-transaction-pool.workspace = true
reth-consensus.workspace = true
reth-consensus-common.workspace = true
reth-ethereum-consensus.workspace = true
reth-chainspec.workspace = true
reth-node-api.workspace = true
reth-ethereum = { workspace = true, features = ["node-api", "node"] }
reth-ethereum-primitives.workspace = true
reth-execution-types.workspace = true
reth-evm.workspace = true
reth-evm-ethereum.workspace = true
reth-revm.workspace = true

# revm precompile library
revm-precompile = "27.0.0"

# revm core for PrecompileProvider implementation
revm = "29.0.0"
revm-handler = "10.0.0"
revm-context-interface = "10.1.0"
revm-interpreter = "15.1.0"

# Alloy dependencies
alloy-rpc-types-engine.workspace = true
alloy-primitives.workspace = true
alloy-eips.workspace = true
alloy-consensus.workspace = true
alloy-rpc-types-txpool.workspace = true
alloy-evm.workspace = true
alloy-genesis.workspace = true

# Core dependencies
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
async-trait.workspace = true
jsonrpsee = { workspace = true, features = ["server", "macros"] }
jsonrpsee-core.workspace = true
jsonrpsee-proc-macros.workspace = true
eyre.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["sync", "time", "rt"] }

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
