[workspace]

[package]
name = "ev-reth-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
alloy-primitives = "1.3"

[dependencies.evolve-ev-reth]
path = ".."

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ande_precompile_fuzz"
path = "fuzz_targets/ande_precompile_fuzz.rs"
test = false
doc = false
bench = false
